examples/test/testpolicy19746.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19746
  namespace: namespace255
spec:
  podSelector:
    matchLabels:
      key42: value42
      key13: value47
      key44: value4
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key18: value1
          key49: value41
      podSelector:
        matchLabels:
          key39: value40
